_archive/crates/kozan-macros/tests/fail/node_missing_field.stderr
error[E0609]: no field `0` on type `&EmptyNode`
 --> tests/fail/node_missing_field.rs:6:23
  |
6 | #[derive(Copy, Clone, Node)]
  |                       ^^^^ unknown field
  |
  = note: this error originates in the derive macro `Node` (in Nightly builds, run with -Z macro-backtrace for more info)
